Completed introduction, literature review

--- a/front_parts/tables.tex
+++ b/front_parts/tables.tex
@@ -21,19 +21,26 @@
 		\justify
 		\normalsize
 		\begin{tabular}{p{1in}p{3in}}
+		    ML & Machine Learning \\
+		    DL & Deep Learning \\
 			NLP & Natural Language Processing\\
 			RNN & Recurrent Neural Network\\
 			ARNN & Attention Based Recurrent Neural Network\\
-            JS & JavaScript\\
-            RegEx & Regular Expressions\\
-            JSON & JavaScript Object Notation\\
-            KB & Kilo Byte\\
-            OOV & Out of Vocab\\
-            NELRALEC & Nepali Language Resources and Localization for Education and
-                Communication.\\
-            NNC & Nepali National Corpus\\
-            POS & Parts of Speech\\
+            DNN & Deep Neural Network\\
+            DCNN & Deep Convolutional Neural Network\\
+            SSD & Single Shot Multibox Detector\\
+            OKM & Optical K-Means\\
+            LP & License Plate\\
             LSTM & Long Short-Term Memory\\
+            CNN & Convolutional Neural Network\\
+            RPG & Rapid Population Growth\\
+            CTC & Connectionist Temporal Classification\\
+            ANPR & Automatic Number Plate Recognition\\
+            ALPR & Automatic License Plate Recognition\\
+            STN & Spatial Transformer Network\\
+            ACID & Atomicity, Consistency, Isolation, Durability\\
+            SQL & Structured Query Language\\
+            RDBMS & Relational Database Management System\\
 		\end{tabular}
 		\break
 		\pagebreak
