--- a/main.tex
+++ b/main.tex
@@ -8,8 +8,11 @@
 \usepackage{cite}
 \usepackage{float}
 \usepackage{ragged2e}
+\usepackage{lipsum}
+% \usepackage{times}
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
+
 % renewing table of contents and bibliography
 \renewcommand{\contentsname}{Table of Contents}
 
@@ -22,9 +25,9 @@
     \include{front_parts/tables}
     \include{chapters/introduction}
     \include{chapters/literature_review}
-    \include{chapters/requirement_analysis}
     \include{chapters/system_architecture}
     \include{chapters/methodolody}
+    \include{chapters/requirement_analysis}
     \include{chapters/expected_outcomes}
     \bibliographystyle{IEEEtran}
     \bibliography{ref}
