--- a/ref.bib
+++ b/ref.bib
@@ -20,3 +20,53 @@
   journal={arXiv preprint arXiv:1806.10447},
   year={2018}
 }
+
+@inproceedings{silva2018license,
+  title={License plate detection and recognition in unconstrained scenarios},
+  author={Silva, S{\'e}rgio Montazzolli and Jung, Cl{\'a}udio Rosito},
+  booktitle={Proceedings of the European conference on computer vision (ECCV)},
+  pages={580--596},
+  year={2018}
+}
+
+@inproceedings{islam2019real,
+  title={Real-Time Bangla License Plate Recognition System using Faster R-CNN and SSD: A Deep Learning Application},
+  author={Islam, Tariqul and Rasel, Risul Islam},
+  booktitle={2019 IEEE International Conference on Robotics, Automation, Artificial-intelligence and Internet-of-Things (RAAICON)},
+  pages={108--111},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{vaishnav2018integrated,
+  title={An integrated automatic number plate recognition for recognizing multi language fonts},
+  author={Vaishnav, Arun and Mandot, Manju},
+  booktitle={2018 7th International Conference on Reliability, Infocom Technologies and Optimization (Trends and Future Directions)(ICRITO)},
+  pages={551--556},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{pustokhina2020automatic,
+  title={Automatic vehicle license plate recognition using optimal K-means with convolutional neural network for intelligent transportation systems},
+  author={Pustokhina, Irina Valeryevna and Pustokhin, Denis Alexandrovich and Rodrigues, Joel JPC and Gupta, Deepak and Khanna, Ashish and Shankar, K and Seo, Changho and Joshi, Gyanendra Prasad},
+  journal={Ieee Access},
+  volume={8},
+  pages={92907--92917},
+  year={2020},
+  publisher={IEEE}
+}
+
+ @misc{pandey_2020, title={Real time number plate recognition system}, url={https://aihubprojects.com/real-time-number-plate-recognition-system/?fbclid=IwAR3ix-fa6bcHNkFrYnBjfzQ_GVpoYEPCVwDAcDUOD4BrcuUPN1QJtSYpxyQ}, journal={AI PROJECTS}, author={Pandey, Diwas}, year={2020}, month={Oct}} 
+ 
+@misc{python.org, title={Welcome to Python.org}, url={https://www.python.org/}, journal={Python.org}} 
+  
+@misc{wikipedia_python, title={Python (programming language)}, url={https://en.wikipedia.org/wiki/Python_(programming_language)}, journal={Wikipedia}, publisher={Wikimedia Foundation}, year={2021}, month={Nov}} 
+   
+@misc{anpr_wikipedia, title={Automatic number-plate recognition}, url={https://en.wikipedia.org/wiki/Automatic_number-plate_recognition#In_mobile_systems}, journal={Wikipedia}, publisher={Wikimedia Foundation}, year={2021}, month={Nov}} 
+    
+@misc{world_health_organization, title={Road traffic injuries}, url={https://www.who.int/news-room/fact-sheets/detail/road-traffic-injuries}, journal={World Health Organization}, publisher={World Health Organization}} 
+ 
+@misc{wikipedia_postgresql,title={PostgreSQL (query language)}, url={https://en.wikipedia.org/wiki/PostgreSQL},journal={Wikimedia Foundation},year={2021},month={Nov}}
+ 
+@misc{anpr_dataset_github,title={Nepali Number Plate dataset}, url={https://github.com/Prasanna1991/LPR},journal={Github},year={2021}}
